begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|ql
operator|.
name|exec
operator|.
name|vector
operator|.
name|expressions
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|ql
operator|.
name|exec
operator|.
name|vector
operator|.
name|VectorExpressionDescriptor
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|serde
operator|.
name|serdeConstants
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|serde2
operator|.
name|typeinfo
operator|.
name|TypeInfo
import|;
end_import

begin_class
specifier|public
class|class
name|PosModLongToLong
extends|extends
name|MathFuncLongToLong
block|{
specifier|private
specifier|static
specifier|final
name|long
name|serialVersionUID
init|=
literal|1L
decl_stmt|;
specifier|private
specifier|final
name|long
name|divisor
decl_stmt|;
specifier|private
name|String
name|outputCastType
init|=
name|serdeConstants
operator|.
name|BIGINT_TYPE_NAME
decl_stmt|;
specifier|public
name|PosModLongToLong
parameter_list|(
name|int
name|inputCol
parameter_list|,
name|long
name|scalarVal
parameter_list|,
name|int
name|outputColumnNum
parameter_list|)
block|{
name|super
argument_list|(
name|inputCol
argument_list|,
name|outputColumnNum
argument_list|)
expr_stmt|;
name|this
operator|.
name|divisor
operator|=
name|scalarVal
expr_stmt|;
block|}
specifier|public
name|PosModLongToLong
parameter_list|()
block|{
name|super
argument_list|()
expr_stmt|;
comment|// Dummy final assignments.
name|divisor
operator|=
literal|0
expr_stmt|;
block|}
annotation|@
name|Override
specifier|protected
name|long
name|func
parameter_list|(
name|long
name|v
parameter_list|)
block|{
comment|// pmod calculation can overflow based on the type of arguments
comment|// casting the arguments according to outputTypeInfo so that the
comment|// results match with GenericUDFPosMod implementation
switch|switch
condition|(
name|outputCastType
condition|)
block|{
case|case
name|serdeConstants
operator|.
name|TINYINT_TYPE_NAME
case|:
name|byte
name|castedByte
init|=
operator|(
name|byte
operator|)
name|v
decl_stmt|;
name|byte
name|castedDivisorByte
init|=
operator|(
name|byte
operator|)
name|divisor
decl_stmt|;
return|return
operator|(
operator|(
name|castedByte
operator|%
name|castedDivisorByte
operator|)
operator|+
name|castedDivisorByte
operator|)
operator|%
name|castedDivisorByte
return|;
case|case
name|serdeConstants
operator|.
name|SMALLINT_TYPE_NAME
case|:
name|short
name|castedShort
init|=
operator|(
name|short
operator|)
name|v
decl_stmt|;
name|short
name|castedDivisorShort
init|=
operator|(
name|short
operator|)
name|divisor
decl_stmt|;
return|return
operator|(
operator|(
name|castedShort
operator|%
name|castedDivisorShort
operator|)
operator|+
name|castedDivisorShort
operator|)
operator|%
name|castedDivisorShort
return|;
case|case
name|serdeConstants
operator|.
name|INT_TYPE_NAME
case|:
name|int
name|castedInt
init|=
operator|(
name|int
operator|)
name|v
decl_stmt|;
name|int
name|castedDivisorInt
init|=
operator|(
name|int
operator|)
name|divisor
decl_stmt|;
return|return
operator|(
operator|(
name|castedInt
operator|%
name|castedDivisorInt
operator|)
operator|+
name|castedDivisorInt
operator|)
operator|%
name|castedDivisorInt
return|;
default|default:
comment|// default is using long types
return|return
operator|(
operator|(
name|v
operator|%
name|divisor
operator|)
operator|+
name|divisor
operator|)
operator|%
name|divisor
return|;
block|}
block|}
annotation|@
name|Override
specifier|public
name|void
name|setOutputTypeInfo
parameter_list|(
name|TypeInfo
name|outputTypeInfo
parameter_list|)
block|{
name|this
operator|.
name|outputTypeInfo
operator|=
name|outputTypeInfo
expr_stmt|;
comment|//default outputTypeInfo is long
if|if
condition|(
name|outputTypeInfo
operator|!=
literal|null
condition|)
block|{
name|outputCastType
operator|=
name|outputTypeInfo
operator|.
name|getTypeName
argument_list|()
expr_stmt|;
block|}
block|}
annotation|@
name|Override
specifier|public
name|String
name|vectorExpressionParameters
parameter_list|()
block|{
return|return
literal|"col "
operator|+
name|colNum
operator|+
literal|", divisor "
operator|+
name|divisor
return|;
block|}
annotation|@
name|Override
specifier|public
name|VectorExpressionDescriptor
operator|.
name|Descriptor
name|getDescriptor
parameter_list|()
block|{
return|return
operator|(
operator|new
name|VectorExpressionDescriptor
operator|.
name|Builder
argument_list|()
operator|)
operator|.
name|setMode
argument_list|(
name|VectorExpressionDescriptor
operator|.
name|Mode
operator|.
name|PROJECTION
argument_list|)
operator|.
name|setNumArguments
argument_list|(
literal|2
argument_list|)
operator|.
name|setArgumentTypes
argument_list|(
name|VectorExpressionDescriptor
operator|.
name|ArgumentType
operator|.
name|INT_FAMILY
argument_list|,
name|VectorExpressionDescriptor
operator|.
name|ArgumentType
operator|.
name|INT_FAMILY
argument_list|)
operator|.
name|setInputExpressionTypes
argument_list|(
name|VectorExpressionDescriptor
operator|.
name|InputExpressionType
operator|.
name|COLUMN
argument_list|,
name|VectorExpressionDescriptor
operator|.
name|InputExpressionType
operator|.
name|SCALAR
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
block|}
end_class

end_unit

