begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|ql
operator|.
name|metadata
package|;
end_package

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Arrays
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Iterator
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|metastore
operator|.
name|HiveMetaStoreClient
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|metastore
operator|.
name|api
operator|.
name|InvalidOperationException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|metastore
operator|.
name|api
operator|.
name|MetaException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|metastore
operator|.
name|api
operator|.
name|Table
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hive
operator|.
name|metastore
operator|.
name|api
operator|.
name|UnknownDBException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|thrift
operator|.
name|TException
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|junit
operator|.
name|Assert
operator|.
name|*
import|;
end_import

begin_import
import|import static
name|org
operator|.
name|mockito
operator|.
name|Mockito
operator|.
name|*
import|;
end_import

begin_comment
comment|/**  * Unit tests for TableIterable  */
end_comment

begin_class
specifier|public
class|class
name|TestTableIterable
block|{
annotation|@
name|Test
specifier|public
name|void
name|testNumReturned
parameter_list|()
throws|throws
name|MetaException
throws|,
name|InvalidOperationException
throws|,
name|UnknownDBException
throws|,
name|TException
block|{
name|HiveMetaStoreClient
name|msc
init|=
name|mock
argument_list|(
name|HiveMetaStoreClient
operator|.
name|class
argument_list|)
decl_stmt|;
comment|// create a mocked metastore client that returns 3 table objects every time it is called
comment|// will use same size for TableIterable batch fetch size
name|List
argument_list|<
name|Table
argument_list|>
name|threeTables
init|=
name|Arrays
operator|.
name|asList
argument_list|(
operator|new
name|Table
argument_list|()
argument_list|,
operator|new
name|Table
argument_list|()
argument_list|,
operator|new
name|Table
argument_list|()
argument_list|)
decl_stmt|;
name|when
argument_list|(
name|msc
operator|.
name|getTableObjectsByName
argument_list|(
name|anyString
argument_list|()
argument_list|,
name|anyListOf
argument_list|(
name|String
operator|.
name|class
argument_list|)
argument_list|)
argument_list|)
operator|.
name|thenReturn
argument_list|(
name|threeTables
argument_list|)
expr_stmt|;
name|List
argument_list|<
name|String
argument_list|>
name|tableNames
init|=
name|Arrays
operator|.
name|asList
argument_list|(
literal|"a"
argument_list|,
literal|"b"
argument_list|,
literal|"c"
argument_list|,
literal|"d"
argument_list|,
literal|"e"
argument_list|,
literal|"f"
argument_list|)
decl_stmt|;
name|TableIterable
name|tIterable
init|=
operator|new
name|TableIterable
argument_list|(
name|msc
argument_list|,
literal|"dummy"
argument_list|,
name|tableNames
argument_list|,
name|threeTables
operator|.
name|size
argument_list|()
argument_list|)
decl_stmt|;
name|tIterable
operator|.
name|iterator
argument_list|()
expr_stmt|;
name|Iterator
argument_list|<
name|Table
argument_list|>
name|tIter
init|=
name|tIterable
operator|.
name|iterator
argument_list|()
decl_stmt|;
name|int
name|size
init|=
literal|0
decl_stmt|;
while|while
condition|(
name|tIter
operator|.
name|hasNext
argument_list|()
condition|)
block|{
name|size
operator|++
expr_stmt|;
name|tIter
operator|.
name|next
argument_list|()
expr_stmt|;
block|}
name|assertEquals
argument_list|(
literal|"Number of table objects returned"
argument_list|,
name|size
argument_list|,
name|tableNames
operator|.
name|size
argument_list|()
argument_list|)
expr_stmt|;
name|verify
argument_list|(
name|msc
argument_list|)
operator|.
name|getTableObjectsByName
argument_list|(
literal|"dummy"
argument_list|,
name|Arrays
operator|.
name|asList
argument_list|(
literal|"a"
argument_list|,
literal|"b"
argument_list|,
literal|"c"
argument_list|)
argument_list|)
expr_stmt|;
name|verify
argument_list|(
name|msc
argument_list|)
operator|.
name|getTableObjectsByName
argument_list|(
literal|"dummy"
argument_list|,
name|Arrays
operator|.
name|asList
argument_list|(
literal|"d"
argument_list|,
literal|"e"
argument_list|,
literal|"f"
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

